Removed mobile navbar fixed to bottom, until i can fix spacing issue Fixed scrolling issues Update HTML files with body class for navbar

--- a/src/public/assets/css/tailwind.output.css
+++ b/src/public/assets/css/tailwind.output.css
@@ -19,7 +19,9 @@
   border-color: #e5e7eb;
   /* 2 */
 }
-
+html {
+  scroll-behavior: smooth;
+}
 ::before,
 ::after {
   --tw-content: "";
@@ -1359,6 +1361,10 @@ select {
   max-height: 36rem;
 }
 
+.max-h-screen {
+  max-height: 100vh;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -2660,6 +2666,9 @@ input {
 }
 
 @media (min-width: 768px) {
+  .md\:max-h-0 {
+    max-height: 0px;
+  }
   .md\:m-2 {
     margin: 0.5rem /* 8px */;
   }
